# claudephant

./: .gitignore  CLAUDE.md  README.md  api_mistakes.md  feedback.md  pyproject.toml
.claude/commands/: mine-api-mistakes.md
.claude/skills/conversation-miner/: SKILL.md
scripts/: README.md  api_mistake_catalog.md  extract_api_mistakes.py  prepare_batches.py
src/claudephant/: cli.py  index.py  mistakes.py  parser.py
tests/: test_cli.py  test_index.py  test_mistakes.py  test_parser.py
tests/fixtures/: assistant_first.jsonl  error_result.jsonl  full_session.jsonl  meta_messages.jsonl  mixed_content.jsonl  noise_only.jsonl  turn_duration.jsonl  with_compaction.jsonl
