[project]
name = "claudephant"
version = "0.1.0"
description = "Mine Claude Code conversation transcripts for repeatable patterns"
requires-python = ">=3.11"
dependencies = ["click"]

[project.scripts]
claudephant = "claudephant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudephant"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
